# llm-fragments-youtube

./: README.md  llm_fragments_youtube.py  pyproject.toml
tests/: test_fragments_youtube.py
