[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-fragments-youtube"
version = "0.1.1"
description = "LLM plugin for loading YouTube subtitles as fragments"
readme = "README.md"
authors = [
    {name = "Agustin B.", email = "redraw@sdf.org"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "llm",
    "yt-dlp",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/redraw/llm-fragments-youtube"
Issues = "https://github.com/redraw/llm-fragments-youtube/issues"

[project.entry-points.llm]
llm_fragments_youtube = "llm_fragments_youtube"
